--- a/CoffeCheap/web/index.xhtml
+++ b/CoffeCheap/web/index.xhtml
@@ -8,6 +8,7 @@
     <h:body>
         Hello from Facelets
         Probando conexion
+        Hola Mundo
         <br />
         <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
     </h:body>
