--- a/CoffeCheap/web/index.xhtml
+++ b/CoffeCheap/web/index.xhtml
@@ -9,6 +9,7 @@
         Hello from Facelets
         Probando conexion
         Hola Mundo
+        dsajfklsadfjklsdñf
         <br />
         <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
     </h:body>
