--- a/CoffeCheap/web/Tipo_trasacciones_Mostrar.xhtml
+++ b/CoffeCheap/web/Tipo_trasacciones_Mostrar.xhtml
@@ -13,33 +13,19 @@
   <h:body>
     <ui:composition template="./WEB-INF/template/Template.xhtml">
       <ui:define name="content">
-      
+
         <h:form class="flip">
 
-          <h:panelGrid id="desplegar1" columns="2" cellpadding="5" border="1">
-            <p:outputLabel value="Codigo Trasaccion" />
-            <p:autoComplete id="Codig" value="#{tipo_transaccionesBean.tipo_transacciones.id_tipo_transacciones}" maxlength="11"/>                         
-
-            <p:outputLabel  value="Nombre" />
-            <p:autoComplete id="Nombre" value="#{tipo_transaccionesBean.tipo_transacciones.nombre}" maxlength="7"/>
+          <h:panelGrid id="desplegar1" columns="1" cellpadding="5" border="1">
+            <p:outputLabel value="Despliegue la lista" />          
 
           </h:panelGrid>
 
-          <p:commandButton value="Reset" type="reset" />
-          <p:commandButton value="Guardar" update="display" oncomplete="PF('dlg').show()" actionListener="#{tipo_transaccionesBean.registrar()}"/>
-          <p:commandButton value="Modificar" update=":otro:display1" oncomplete="PF('dlg2').show()" actionListener="#{tipo_transaccionesBean.listar()}"/>
 
-          <p:dialog widgetVar="dlg" modal="true" resizable="false" header="Valores Guardados" showEffect="fade"> 
-            <p:panelGrid id="display" columns="2" columnClasses="label,value">
 
-              <h:outputText value="Codigo Trasaccion" />
-              <h:outputText id="CodigV" value="#{tipo_transaccionesBean.tipo_transacciones.id_tipo_transacciones}" />                         
+          <p:commandButton value="Desplegar Lista" update=":otro:display1" oncomplete="PF('dlg2').show()" actionListener="#{tipo_transaccionesBean.listar()}"/>
 
-              <h:outputText value="Nombre Trasaccion" />
-              <h:outputText id="NombreV" value="#{tipo_transaccionesBean.tipo_transacciones.nombre}" />
 
-            </p:panelGrid>
-          </p:dialog>
 
         </h:form>
         <h:form id="otro">
@@ -62,10 +48,7 @@
 
                 <p:column>
                   <h:commandLink value="Eliminar" actionListener="#{tipo_transaccionesBean.eliminar(tabla)}"/>                    
-                </p:column>
-                <p:column>
-                  <h:commandLink value="Modificar" actionListener="#{tipo_transaccionesBean.modificar(tabla)}"/>
-                </p:column>                
+                </p:column>                              
 
               </p:dataList>
             </p:panelGrid>
