--- a/CoffeCheap/web/Tipo_trasacciones_Modificar.xhtml
+++ b/CoffeCheap/web/Tipo_trasacciones_Modificar.xhtml
@@ -37,7 +37,7 @@
               </p:column>
 
               <p:column>
-                <h:commandLink value="Eliminar" style="color: #ffffff" actionListener="#{tipo_transaccionesBean.eliminar(tabla)}"/>                    
+                <h:commandLink value="Modificar" style="color: #ffffff" actionListener="#{tipo_transaccionesBean.modificar(tabla)}"/>                    
               </p:column>                              
 
             </p:dataList>
