--- a/CoffeCheap/web/PersonalChef_Eliminar.xhtml
+++ b/CoffeCheap/web/PersonalChef_Eliminar.xhtml
@@ -7,10 +7,10 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <h:form>
+        <h:form id="form1">
             <p:outputLabel for="CodigoEliminar" value="Codigo"/><br/>
             <p:inputText id="CodigoEliminar" value="#{personal_ChefBean.personal.id_personal}"/><br/>
-            <p:commandButton value="Eliminar" action="#{personal_ChefBean.Eliminar()}" />
+            <p:commandButton value="Eliminar" action="#{personal_ChefBean.Eliminar()}" update="form1"/>
         </h:form>
     </h:body>
 </html>
