--- a/CoffeCheap/web/PersonalChef_Modificar.xhtml
+++ b/CoffeCheap/web/PersonalChef_Modificar.xhtml
@@ -2,13 +2,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>Facelet Title</title>
-
-
     </h:head>
     <h:body>
         <ui:composition template="./WEB-INF/template/Template.xhtml">
@@ -27,7 +25,7 @@
                             <p:outputLabel for="TurnoChef" value="Turno"/>
                             <p:inputText id="TurnoChef" value="#{personal_ChefBean.personal.turno.id_turno}" />
                         </h:panelGrid><br/>
-                        <p:commandButton value="Guardar" action="#{personal_ChefBean.Guardar()}" update="form1"/>
+                        <p:commandButton value="Modificar" action="#{personal_ChefBean.Modificar()}" update="form1"/>
                     </h:form>
                     <h:form id="form2" style="width: 150px">
 
