--- a/CoffeCheap/web/Compra_Guardar.xhtml
+++ b/CoffeCheap/web/Compra_Guardar.xhtml
@@ -3,18 +3,37 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <h:form id="form1">
-            <p:outputLabel for="orden" value="Codigo de Orden"/>
-            <p:selectOneMenu id="orden" value="#{comprarBean.compra.ocompras}">
-                <f:selectItem itemLabel="Empleado..." />
-                <f:selectItems value="#{vehiculosBean.listaempleado}" var="empleado" itemLabel="#{empleado.nombre}" itemValue="#{empleado.codigo}"/>
-            </p:selectOneMenu>
-        </h:form>
+        <ui:composition template="./WEB-INF/template/Template.xhtml">
+            <ui:define name="content">
+                <h:form id="form1">
+                    <h:panelGrid id="panel1" columns="2" cellpadding="5" border="1" style="color: #ffffff">
+                        <p:outputLabel for="Codigo" value="Codigo de Compra"/>
+                        <p:inputText id="Codigo" value="#{comprarBean.compra.id_compras}"/>
+                        <p:outputLabel for="Orden" value="Codigo de Orden"/>
+                        <p:inputText id="Orden" value="#{comprarBean.compra.ocompras.id_orden_compras}"/>
+                        <p:outputLabel for="Proveedor" value="Id Proveedor"/>
+                        <p:inputText id="Proveedor" value="#{comprarBean.compra.proveedor.id_provedor}"/>
+                        <p:outputLabel for="Producto" value="Id Producto"/>
+                        <p:inputText id="Producto" value="#{comprarBean.compra.producto.id_producto}" />
+                        <p:outputLabel for="Cantidad" value="Cantidad"/>
+                        <p:inputText id="Cantidad" value="#{comprarBean.compra.cantidad}" />
+                        <p:outputLabel for="Costo" value="Costo"/>
+                        <p:inputText id="Costo" value="#{comprarBean.compra.costo}" />
+                        <p:outputLabel for="NoFactura" value="No. de Factura"/>
+                        <p:inputText id="NoFactura" value="#{comprarBean.compra.no_fac}" />
+                        <p:outputLabel for="Serie" value="Serie"/>
+                        <p:inputText id="Serie" value="#{comprarBean.compra.serie}" />
+                    </h:panelGrid><br/>
+                    <p:commandButton value="Guardar" action="#{comprarBean.Ingresar()}" update="form1"/>
+                </h:form>
+            </ui:define>
+        </ui:composition>
     </h:body>
 </html>
 
