--- a/CoffeCheap/web/PersonalChef_Guardar.xhtml
+++ b/CoffeCheap/web/PersonalChef_Guardar.xhtml
@@ -25,22 +25,12 @@
                             <p:outputLabel for="TelefonoChef" value="Telefono"/>
                             <p:inputMask id="TelefonoChef" value="#{personal_chefBean.personal.telefono}" mask="99999999"/>
                             <p:outputLabel for="TurnoChef" value="Turno"/>
-                            <p:inputText id="TurnoChef" value="#{personal_chefBean.personal.turno.id_turno}" />
+                            <p:selectOneMenu id="TurnoChef" value="#{personal_chefBean.personal.turno.id_turno}">
+                                <f:selectItem itemLabel="Turno..."/>
+                                <f:selectItems value="#{turnoBean.lista}" var="lista" itemLabel="#{lista.horario_turno}" itemValue="#{lista.id_turno}"/>                                
+                            </p:selectOneMenu>
                         </h:panelGrid><br/>
                         <p:commandButton value="Guardar" action="#{personal_chefBean.Guardar()}" update="form1"/>
-                    </h:form>
-                    <h:form id="form2" style="width: 150px">
-
-                    </h:form>
-                    <h:form id="form3" style="">
-                        <p:dataTable id="data" value="#{turnoBean.lista}" var="turno" style="width: 300px;">
-                            <p:column headerText="Codigo:">
-                                <p:outputLabel style="color: white" value="#{turno.id_turno}"/>
-                            </p:column>
-                            <p:column headerText="Nombre:">
-                                <p:outputLabel style="color: white" value="#{turno.horario_turno}"/>
-                            </p:column> 
-                        </p:dataTable>
                     </h:form>
                 </h:panelGrid>
             </ui:define>
