--- a/CoffeCheap/web/Orden_compras_Guardar.xhtml
+++ b/CoffeCheap/web/Orden_compras_Guardar.xhtml
@@ -13,7 +13,7 @@
   <h:body>
     <ui:composition template="./WEB-INF/template/Template.xhtml">
       <ui:define name="content">
-        <f:event type="preRenderView" listener="#{productoBean.listar()}"/>
+        <f:event type="preRenderView" listener="#{productoBean.mostrar()}"/>
         <f:event type="preRenderView" listener="#{proveedorBean.mostrar()}"/>
 
         <h:form class="flip">
