--- a/CoffeCheap/web/PersonalChef_Eliminar.xhtml
+++ b/CoffeCheap/web/PersonalChef_Eliminar.xhtml
@@ -2,16 +2,23 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <h:form id="form1">
-            <p:outputLabel for="CodigoEliminar" value="Codigo"/><br/>
-            <p:inputText id="CodigoEliminar" value="#{personal_chefBean.personal.id_personal}"/><br/>
-            <p:commandButton value="Eliminar" action="#{personal_chefBean.Eliminar()}" update="form1"/>
-        </h:form>
+        <ui:composition template="./WEB-INF/template/Template.xhtml">
+
+            <ui:define name="content">
+                <h:form id="form1">
+                    <p:outputLabel for="CodigoEliminar" value="Codigo"/><br/>
+                    <p:inputText id="CodigoEliminar" value="#{personal_chefBean.personal.id_personal}"/><br/>
+                    <p:commandButton value="Eliminar" action="#{personal_chefBean.Eliminar()}" update="form1"/>
+                </h:form>
+            </ui:define>
+
+        </ui:composition>s
     </h:body>
 </html>
 
