--- a/CoffeCheap/web/Turno_Eliminar.xhtml
+++ b/CoffeCheap/web/Turno_Eliminar.xhtml
@@ -2,16 +2,23 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <h:form id="form1">
-            <p:outputLabel for="codigo" value="Codigo:"/>
-            <p:inputText id="codigo" value="#{turnoBean.turno.id_turno}"/><br/>
-            <p:commandButton value="Ingresar" action="#{turnoBean.Eliminar()}" update="form1"/>
-        </h:form>
+        <ui:composition template="./WEB-INF/template/Template.xhtml">
+            <ui:define name="content">
+                <h:form id="form1">
+                    <h:panelGrid id="general" columns="2" cellpadding="5">
+                        <p:outputLabel for="codigo" value="Codigo:"/>
+                        <p:inputText id="codigo" value="#{turnoBean.turno.id_turno}"/><br/>
+                    </h:panelGrid>
+                    <p:commandButton value="Ingresar" action="#{turnoBean.Eliminar()}" update="form1"/>
+                </h:form>
+            </ui:define>
+        </ui:composition>
     </h:body>
 </html>
 
