--- a/CoffeCheap/web/Turno_Modificar.xhtml
+++ b/CoffeCheap/web/Turno_Modificar.xhtml
@@ -2,20 +2,27 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <h:form id="form1">
-            <p:outputLabel for="codigomodificar" value="Codigo"/>
-            <p:inputText id="codigomodificar" value="#{turnoBean.turno.id_turno}"/><br/>
-            <p:outputLabel for="horariomodificar" value="Horario de Turno"/>
-            <p:inputMask id="horariomodificar" value="#{turnoBean.turno.horario_turno}" mask="99:99 A 99:99"/><br/>
-            <p:outputLabel for="observacionesmodificar" value="Observaciones"/>
-            <p:inputText id="observacionesmodificar" value="#{turnoBean.turno.observaciones}"/><br/>
-            <p:commandButton value="Modificar" action="#{turnoBean.Editar()}" update="form1"/>
-        </h:form>            
+        <ui:composition template="./WEB-INF/template/Template.xhtml">
+            <ui:define name="content">
+                <h:form id="form1">
+                    <h:panelGrid id="general" columns="2" cellpadding="5">
+                        <p:outputLabel for="codigomodificar" value="Codigo"/>
+                        <p:inputText id="codigomodificar" value="#{turnoBean.turno.id_turno}"/>
+                        <p:outputLabel for="horariomodificar" value="Horario de Turno"/>
+                        <p:inputMask id="horariomodificar" value="#{turnoBean.turno.horario_turno}" mask="99:99 A 99:99"/>
+                        <p:outputLabel for="observacionesmodificar" value="Observaciones"/>
+                        <p:inputText id="observacionesmodificar" value="#{turnoBean.turno.observaciones}"/>
+                    </h:panelGrid><br/>
+                    <p:commandButton value="Modificar" action="#{turnoBean.Editar()}" update="form1"/>
+                </h:form> 
+            </ui:define>
+        </ui:composition>
     </h:body>
 </html>
 
