--- a/CoffeCheap/web/Pedido_Eliminar.xhtml
+++ b/CoffeCheap/web/Pedido_Eliminar.xhtml
@@ -17,7 +17,7 @@
         <f:event type="preRenderView" listener="#{pedidoBean.listar()}"/>
         <h:form class="flip">
           
-            <p:outputLabel style="color: #ffffff;" value="Lista para escoger tipo de trasaccion a eliminar" />          
+            <p:outputLabel style="color: #ffffff;" value="Lista para escoger el pedido a eliminar" />          
          
         </h:form>
         <h:form id="otro">
