--- a/CoffeCheap/web/Orden_compras_Eliminar.xhtml
+++ b/CoffeCheap/web/Orden_compras_Eliminar.xhtml
@@ -17,7 +17,7 @@
         <h:form class="flip">
           <f:event type="preRenderView"  listener="#{orden_comprasBean.Mostrar}"/>
           <f:event type="preRenderView" listener="#{proveedorBean.Mostrar()}"/>
-          <p:outputLabel style="color: #ffffff;" value="Lista para escoger tipo de trasaccion a eliminar" />          
+          <p:outputLabel style="color: #ffffff;" value="Lista para escoger orden de transaccion a Modificar" />          
 
         </h:form>
         <h:form id="otro">
@@ -49,7 +49,9 @@
               </p:column>
               <p:column>
                 <f:facet name="header">id proveedor</f:facet>
-                <p:selectOneMenu  id="lis1" style="width:125px; background-color: #ffffff" value="#{tabla.pproductos.id_proveedor}" > 
+                <h:inputText value="#{tabla.pproductos.producto.id_producto}" style="color: #ffffff; width : 80px" />
+                
+                <p:selectOneMenu id="lis1" style="width:125px; background-color: #ffffff" value="#{tabla.pproductos.id_proveedor}" > 
                   <f:selectItems value="#{proveedorBean.listar}" var="tip" itemLabel="#{tip.nombre}" itemValue="#{tip.id_provedor}"/>      
                   <p:ajax event="change" update="@this" />      
                 </p:selectOneMenu> 
