--- a/CoffeCheap/web/Plato_Eliminar.xhtml
+++ b/CoffeCheap/web/Plato_Eliminar.xhtml
@@ -22,35 +22,37 @@
 
           <!-- Modal -->
 
-          <p:panelGrid id="display1" columns="4" columnClasses="label,value">          
-              <p:dataList value="#{platoBean.lstPlato}" var="tabla" type="unordered" itemType="none" paginator="true" rows="10" styleClass="paginated">
+           <p:panelGrid id="display1" columns="7" columnClasses="label,value" style="margin:10px 0">          
+              <p:dataTable value="#{platoBean.lstPlato}" var="tabla"  paginator="true" rows="10" styleClass="paginated" resizableColumns="true">
+              
 
-              <p:column>
+                <p:column width="50">
                 <f:facet name="header">Codigo del platillo</f:facet>
                 <h:inputText value="#{tabla.id_plato}" style="color: #ffffff; width : 30px" />
-              </p:column>
-              <p:column>
+                </p:column>
+                <p:column width="200">
                 <f:facet name="header">Nombre del platillo</f:facet>
                 <h:inputText value="#{tabla.nombre}" style="color: #ffffff; width : 200px" />
-              </p:column>
-              <p:column>
+                </p:column>
+                <p:column width="60">
                 <f:facet name="header">Precio del platillo</f:facet>
                 <h:inputText value="#{tabla.precio}" style="color: #ffffff; width : 60px" />
-              </p:column>
-              <p:column>
+                </p:column>
+              <p:column width="60">
                 <f:facet name="header">Porciones</f:facet>
                 <h:inputText value="#{tabla.porciones}" style="color: #ffffff; width : 60px" />
               </p:column>    
-              <p:column>
+              <p:column width="400">
                 <f:facet name="header">Descripcion del platillo</f:facet>
                 <h:inputText value="#{tabla.descripcion}" style="color: #ffffff; width : 400px" />
-              </p:column>
+              </p:column>    
 
-              <p:column>
-                  <h:commandLink value="Eliminar" style="color: #ffffff" actionListener="#{platoBean.eliminar(tabla)}"/>                    
+                  <p:column width="100">
+                      <h:commandLink value="Eliminar" style="color: #ffffff" actionListener="#{platoBean.eliminar(tabla)}"/>                    
               </p:column>                              
 
-            </p:dataList>
+            
+           </p:dataTable>
           </p:panelGrid>        
 
         </h:form> 
