--- a/CoffeCheap/web/Plato_Modificar.xhtml
+++ b/CoffeCheap/web/Plato_Modificar.xhtml
@@ -21,32 +21,32 @@
 
           <!-- Modal -->
 
-          <p:panelGrid id="display1" columns="7" columnClasses="label,value">          
-              <p:dataTable value="#{platoBean.lstPlato}" var="tabla"  paginator="true" rows="10" styleClass="paginated">
+          <p:panelGrid id="display1" columns="7" columnClasses="label,value" style="margin:10px 0">          
+              <p:dataTable value="#{platoBean.lstPlato}" var="tabla"  paginator="true" rows="10" styleClass="paginated" resizableColumns="true" >
               
 
-              <p:column>
+                <p:column width="90">
                 <f:facet name="header">Codigo del platillo</f:facet>
                 <h:inputText value="#{tabla.id_plato}" style="color: #ffffff; width : 30px" />
-              </p:column>
-              <p:column>
+                </p:column>
+                <p:column width="200">
                 <f:facet name="header">Nombre del platillo</f:facet>
                 <h:inputText value="#{tabla.nombre}" style="color: #ffffff; width : 200px" />
-              </p:column>
-              <p:column>
+                </p:column>
+                <p:column width="90">
                 <f:facet name="header">Precio del platillo</f:facet>
                 <h:inputText value="#{tabla.precio}" style="color: #ffffff; width : 60px" />
-              </p:column>
-              <p:column>
+                </p:column>
+              <p:column width="90">
                 <f:facet name="header">Porciones</f:facet>
                 <h:inputText value="#{tabla.porciones}" style="color: #ffffff; width : 60px" />
               </p:column>    
-              <p:column>
+              <p:column width="400">
                 <f:facet name="header">Descripcion del platillo</f:facet>
                 <h:inputText value="#{tabla.descripcion}" style="color: #ffffff; width : 400px" />
               </p:column>    
 
-              <p:column>
+                  <p:column width="100">
                   <h:commandLink value="Modificar" style="color: #ffffff" actionListener="#{platoBean.modificar(tabla)}"/>                    
               </p:column>                              
 
