--- a/CoffeCheap/web/Tipo_transacciones_Modificar.xhtml
+++ b/CoffeCheap/web/Tipo_transacciones_Modificar.xhtml
@@ -25,7 +25,7 @@
           <!-- Modal -->
 
           <p:panelGrid id="display1" columns="4" columnClasses="label,value">          
-            <p:dataList value="#{tipo_transaccionesBean.lstTipo_transacciones}" var="tabla" type="unordered" itemType="none" paginator="true" rows="10" styleClass="paginated">
+            <p:dataTable value="#{tipo_transaccionesBean.lstTipo_transacciones}" var="tabla" paginator="true" rows="10" styleClass="paginated">
 
               <p:column>
                 <f:facet name="header">Codigo de la trasaccion</f:facet>
@@ -40,7 +40,7 @@
                 <h:commandLink value="Modificar" style="color: #ffffff" actionListener="#{tipo_transaccionesBean.modificar(tabla)}"/>                    
               </p:column>                              
 
-            </p:dataList>
+            </p:dataTable>>
           </p:panelGrid>        
 
         </h:form> 
