--- a/CoffeCheap/web/Orden_compras_Guardar.xhtml
+++ b/CoffeCheap/web/Orden_compras_Guardar.xhtml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 
 <html xmlns="http://www.w3.org/1999/xhtml"
@@ -10,82 +10,80 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 
-    <h:body>
-        <ui:composition template="./WEB-INF/template/Template.xhtml">
-            <ui:define name="content">
-                <f:event type="preRenderView" listener="#{productoBean.Mostrar()}"/>
-                <f:event type="preRenderView" listener="#{proveedorBean.Mostrar()}"/>
-                <f:event type="preRenderView" listener="#{orden_comprasBean.Mostrar_Prov_Produ()}"/>
-                <h:form class="flip">
+  <h:body>
+    <ui:composition template="./WEB-INF/template/Template.xhtml">
+      <ui:define name="content">
+        <f:event type="preRenderView" listener="#{productoBean.Mostrar()}"/>
+        <f:event type="preRenderView" listener="#{proveedorBean.Mostrar()}"/>
+        <f:event type="preRenderView" listener="#{orden_comprasBean.Mostrar_Prov_Produ()}"/>
+        <h:form class="flip">
 
-                    <h:panelGrid id="desplegar1" columns="2" cellpadding="5" border="1">
+          <p:outputLabel value="id orden de compras" />
+          <p:autoComplete id="Codig" value="#{orden_comprasBean.orden_compras.id_orden_compras}"/>                         
 
-                        <p:outputLabel value="id orden de compras" />
-                        <p:autoComplete id="Codig" value="#{orden_comprasBean.orden_compras.id_orden_compras}"/>                         
+          <p:outputLabel  for="mask1" value="Fecha de Orden" />
+          <p:calendar id="mask1" value="#{orden_comprasBean.orden_compras.fecha_orden}" pattern="yyyy-MM-dd" navigator="true" />
 
-                        <p:outputLabel  for="mask1" value="Fecha de Orden" />
-                         <p:calendar id="mask1" value="#{orden_comprasBean.orden_compras.fecha_orden}" pattern="yyyy-MM-dd" navigator="true" />
-                                                  
-                        <p:outputLabel  for="mask" value="Fecha de Entrega" />
-                        <p:calendar id="mask" value="#{orden_comprasBean.orden_compras.fecha_entrega}" pattern="yyyy-MM-dd" navigator="true" />
-                        
-                        <p:outputLabel  value="Cantidad Orden" />
-                        <p:autoComplete id="Cantidad" value="#{orden_comprasBean.orden_compras.cantidad}"/>
+          <p:outputLabel  for="mask" value="Fecha de Entrega" />
+          <p:calendar id="mask" value="#{orden_comprasBean.orden_compras.fecha_entrega}" pattern="yyyy-MM-dd" navigator="true" />
 
-                        <p:outputLabel for="Proveedor_lista" value="Id_proveedor:" />
-                        <p:selectOneMenu id="Proveedor_lista" style="width:125px" value="#{orden_comprasBean.orden_compras.pproductos.id_proveedor}"> 
-                            <f:selectItem itemLabel="Proveedor..." itemValue=""/>
-                            <f:selectItems value="#{proveedorBean.listar}" var="lista1" itemLabel="#{lista1.nombre}" itemValue="#{lista1.id_proveedor}"/>      
-                            <f:ajax execute="Proveedor_lista" render="Producto_lista"/>
-                        </p:selectOneMenu> 
+          <p:outputLabel  value="Cantidad Orden" />
+          <p:autoComplete id="Cantidad" value="#{orden_comprasBean.orden_compras.cantidad}"/>
 
-                        <p:outputLabel for="Producto_lista" value="Id_producto:" />
-                        <p:selectOneMenu id="Producto_lista" style="width:125px" value="#{orden_comprasBean.orden_compras.pproductos.producto.id_producto}"> 
-                            <f:selectItem itemLabel="Producto..." itemValue=""/>
-                            <f:selectItems value="#{orden_comprasBean.lstProveedor_productos}" var="listapro" itemLabel="#{listapro.producto.nombre}" itemValue="#{listapro.producto.id_producto}"/>      
-                        </p:selectOneMenu> 
+          <p:outputLabel for="Proveedor_lista" value="Id_proveedor:" />
+          <p:selectOneMenu id="Proveedor_lista" style="width:125px" value="#{orden_comprasBean.orden_compras.pproductos.id_proveedor}"> 
+            <f:selectItem itemLabel="Proveedor..." itemValue=""/>
+            <f:selectItems value="#{proveedorBean.listar}" var="lista1" itemLabel="#{lista1.nombre}" itemValue="#{lista1.id_provedor}"/>      
+            <f:ajax execute="Proveedor_lista" render="Producto_lista"/>
+          </p:selectOneMenu> 
 
-                        <p:outputLabel  value="precio" />
-                        <p:autoComplete id="precio" value="#{orden_comprasBean.orden_compras.precio}"/>
+          <p:outputLabel for="Producto_lista" value="Id_producto:" />
+          <p:selectOneMenu id="Producto_lista" style="width:125px" value="#{orden_comprasBean.orden_compras.pproductos.producto.id_producto}"> 
+            <f:selectItem itemLabel="Producto..." itemValue=""/>
+            <f:selectItems value="#{orden_comprasBean.lstProveedor_productos}" var="listapro" itemLabel="#{listapro.producto.nombre}" itemValue="#{listapro.producto.id_producto}"/>      
+          </p:selectOneMenu> 
 
-                    </h:panelGrid>
+          <p:outputLabel  value="precio" />
+          <p:autoComplete id="precio" value="#{orden_comprasBean.orden_compras.precio}"/>
+
+          </h:panelGrid>
 
 
-                    <p:commandButton value="Guardar" update="display" oncomplete="PF('dlg').show()" actionListener="#{orden_comprasBean.registrar()}"/>
+          <p:commandButton value="Guardar" update="display" oncomplete="PF('dlg').show()" actionListener="#{orden_comprasBean.registrar()}"/>
 
 
-                    <p:dialog widgetVar="dlg" modal="true" resizable="false" header="Valores Guardados" showEffect="fade"> 
-                        <p:panelGrid id="display" columns="2" columnClasses="label,value">
+          <p:dialog widgetVar="dlg" modal="true" resizable="false" header="Valores Guardados" showEffect="fade"> 
+            <p:panelGrid id="display" columns="2" columnClasses="label,value">
 
-                            <h:outputText value="id_orden_compras" />
-                            <h:outputText id="compra1" value="#{orden_comprasBean.orden_compras.id_orden_compras}" />                         
+              <h:outputText value="id_orden_compras" />
+              <h:outputText id="compra1" value="#{orden_comprasBean.orden_compras.id_orden_compras}" />                         
 
-                            <h:outputText value="fecha orden" />
-                            <h:outputText id="orden1" value="#{orden_comprasBean.orden_compras.fecha_entrega}" />
+              <h:outputText value="fecha orden" />
+              <h:outputText id="orden1" value="#{orden_comprasBean.orden_compras.fecha_entrega}" />
 
-                            <h:outputText value="Fecha entrega" />
-                            <h:outputText id="entrega1" value="#{orden_comprasBean.orden_compras.fecha_orden}" />
+              <h:outputText value="Fecha entrega" />
+              <h:outputText id="entrega1" value="#{orden_comprasBean.orden_compras.fecha_orden}" />
 
-                            <h:outputText value="id producto" />
-                            <h:outputText id="producto1" value="#{orden_comprasBean.orden_compras.pproductos.producto.id_producto}" />
+              <h:outputText value="id producto" />
+              <h:outputText id="producto1" value="#{orden_comprasBean.orden_compras.pproductos.producto.id_producto}" />
 
-                            <h:outputText value="id proveedor" />
-                            <h:outputText id="proveedor1" value="#{orden_comprasBean.orden_compras.pproductos.id_proveedor}" />
+              <h:outputText value="id proveedor" />
+              <h:outputText id="proveedor1" value="#{orden_comprasBean.orden_compras.pproductos.id_proveedor}" />
 
-                            <h:outputText value="precio" />
-                            <h:outputText id="precio1" value="#{orden_comprasBean.orden_compras.precio}" />
+              <h:outputText value="precio" />
+              <h:outputText id="precio1" value="#{orden_comprasBean.orden_compras.precio}" />
 
-                        </p:panelGrid>
-                    </p:dialog>
+            </p:panelGrid>
+          </p:dialog>
 
-                </h:form>
-                <h:form id="otro">       
+        </h:form>
+        <h:form id="otro">       
 
 
-                </h:form> 
+        </h:form> 
 
-            </ui:define>
-        </ui:composition>
-    </h:body>
+      </ui:define>
+    </ui:composition>
+  </h:body>
 </html>
 
