--- a/CoffeCheap/web/Orden_compras_Modificar.xhtml
+++ b/CoffeCheap/web/Orden_compras_Modificar.xhtml
@@ -17,8 +17,11 @@
 
         <h:form class="flip">
           <f:event type="preRenderView"  listener="#{orden_comprasBean.Mostrar}"/>
-          <f:event type="preRenderView" listener="#{proveedorBean.Mostrar()}"/>
+
+
           <f:event type="preRenderView" listener="#{productoBean.Mostrar()}"/>
+          <f:event type="preRenderView" listener="#{proveedorBean.Mostrar()}"/>
+          <f:event type="preRenderView" listener="#{orden_comprasBean.Mostrar_Prov_Produ()}"/>
           <p:outputLabel style="color: #ffffff;" value="Lista para escoger orden de transaccion a Modificar" />          
 
         </h:form>
@@ -43,18 +46,20 @@
                 <f:facet name="header">Cantidad Orden</f:facet>
                 <h:inputText value="#{tabla.cantidad}" style="color: #ffffff; width : 80px" />
               </p:column>
-              <p:column>
-                <f:facet name="header">Id Producto</f:facet>              
-                <p:selectOneMenu id="lis2" style="width:125px; background-color: #ffffff" value="#{tabla.pproductos.producto.id_producto}" > 
-                  <f:selectItems value="#{productoBean.lstProducto}" var="tip" itemLabel="#{tip.nombre}" itemValue="#{tip.id_producto}"/>      
-
+              <p:column id="columna_proveedor">
+                <f:facet name="header">Id Proveedor</f:facet>              
+                <p:selectOneMenu id="lis2" style="width:125px; background-color: #ffffff" value="#{tabla.pproductos.proveedor.id_proveedor}" >   
+                  <f:selectItem itemLabel="Proveedor" itemValue=""/>
+                  <f:selectItems value="#{proveedorBean.listar}" var="lista1" itemLabel="#{lista1.nombre}" itemValue="#{lista1.id_proveedor}"/>      
+                  <f:ajax execute="lis2" render="columna_proveedor:lis1"/>
                 </p:selectOneMenu> 
               </p:column>
-              <p:column>
+              <p:column id="columna_producto">
 
-                <f:facet name="header">id proveedor</f:facet>
-                <p:selectOneMenu id="lis1" style="width:125px; background-color: #ffffff" value="#{tabla.pproductos.id_proveedor}" > 
-                  <f:selectItems value="#{proveedorBean.listar}" var="tip" itemLabel="#{tip.nombre}" itemValue="#{tip.id_proveedor}"/>                      
+                <f:facet name="header">Id Producto</f:facet>
+                <p:selectOneMenu id="lis1" style="width:125px; background-color: #ffffff" value="#{tabla.pproductos.producto.id_producto}" > 
+                  <f:selectItem itemLabel="Producto" itemValue=""/>
+                  <f:selectItems value="#{orden_comprasBean.lstProveedor_productos}" var="listapro" itemLabel="#{listapro.producto.nombre}" itemValue="#{listapro.producto.id_producto}"/>      
                 </p:selectOneMenu> 
 
               </p:column>
